# connector

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  progress.md  pyproject.toml
.github/workflows/: publish.yml
hardware_agent/: __init__.py  cli.py
hardware_agent/core/: environment.py  executor.py  llm.py  loop_detector.py  models.py  module_loader.py  orchestrator.py  tools.py
hardware_agent/core/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
hardware_agent/data/: analysis.py  community.py  fingerprint.py  models.py  replay.py  store.py
hardware_agent/devices/: base.py  generic_device.py  null_device.py  registry.py  rigol_common.py  visa_device.py
hardware_agent/devices/rigol_ds1054z/: module.py
hardware_agent/prompts/: stuck.txt  system.txt  troubleshoot.txt
supabase/: migration.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260219000000_initial_schema.sql  20260219010000_fix_seed_data.sql  20260219020000_grant_anon_privileges.sql  20260219030000_fix_rls_policies.sql  20260219040000_debug_and_fix_permissions.sql  20260219050000_cleanup_test_data.sql  20260219060000_expand_contributions_columns.sql  20260219070000_cleanup_test_contributions.sql
tests/: conftest.py  test_environment.py  test_executor.py  test_llm.py  test_loop_detector.py  test_orchestrator.py
tests/test_data/: test_analysis.py  test_community.py  test_fingerprint.py  test_replay.py  test_store.py
tests/test_devices/: test_base_module.py  test_registry.py  test_rigol_ds1054z.py  test_visa_device.py
tests/test_providers/: test_anthropic.py  test_detection.py  test_google.py  test_openai.py
