[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-connector"
dynamic = ["version"]
description = "AI-powered lab instrument connection assistant"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
    {name = "Yash Prakash"},
]
keywords = ["hardware", "lab", "instruments", "visa", "scpi", "oscilloscope", "test-equipment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.39.0",
    "supabase>=2.0.0",
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "pyusb>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
openai = ["openai>=1.0.0"]
google = ["google-genai>=1.0.0"]
all-providers = ["openai>=1.0.0", "google-genai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/Yash-Prakash1/connector"
Repository = "https://github.com/Yash-Prakash1/connector"
Issues = "https://github.com/Yash-Prakash1/connector/issues"

[project.scripts]
hardware-connector = "hardware_agent.cli:app"

[tool.setuptools.packages.find]
include = ["hardware_agent*"]

[tool.setuptools_scm]
version_file = "hardware_agent/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
